# AI-Secondary-Inspection-for-AOI

./: LICENSE  README.md
aoi_quality_inspection/: CMakeLists.txt  docker-compose.yml  pytest.ini  requirements.txt
aoi_quality_inspection/active_learning/: __init__.py  active_learning_service.py  performance_monitor.py  uncertainty_sampler.py
aoi_quality_inspection/config/: config.yaml
aoi_quality_inspection/data_storage/: __init__.py  database.py  image_storage.py  schema.sql
aoi_quality_inspection/data_storage/dao/: annotation_dao.py  config_dao.py  model_version_dao.py  product_model_dao.py  sample_dao.py  user_dao.py
aoi_quality_inspection/docs/: API_DOCUMENTATION.md  DEPLOYMENT_GUIDE.md  FINAL_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETE.md  USER_MANUAL.md
aoi_quality_inspection/image_collector/: file_watcher.py  image_processor.py  task_queue.py
aoi_quality_inspection/inference_engine/: anomaly_detector.py  faiss_searcher.py  feature_extractor.py  inference_engine.py
aoi_quality_inspection/model_updater/: __init__.py  feature_lib_manager.py  update_service.py
aoi_quality_inspection/scripts/: init_db.py  start.sh  stop.sh
aoi_quality_inspection/tests/: conftest.py  test_active_learning.py  test_data_storage.py  test_inference_engine.py
aoi_quality_inspection/web_terminal/backend/: Dockerfile  app.py
aoi_quality_inspection/web_terminal/backend/routes/: annotation.py  auth.py  model.py  statistics.py
aoi_quality_inspection/web_terminal/frontend/: index.html  package.json
(+7 files in other folders)
